@@ -10,6 +10,7 @@ import ec.Initializer;
 import ec.Individual;
 import ec.BreedingPipeline;
 import ec.Breeder;
+import ec.simple.*;
 import ec.EvolutionState;
 import ec.Population;
 import ec.util.Parameter;
@@ -37,55 +38,40 @@ import ec.util.*;
  * @version 1.0 
  */
 
-public class SpatialBreeder extends Breeder
+public class SpatialBreeder extends SimpleBreeder
     {
     public void setup(final EvolutionState state, final Parameter base)
         {
-        // nothing -- just to implement the abstract requirement
         }
                 
-    public Population breedPopulation(EvolutionState state) 
-        {
-
-        Population newpop = (Population) state.population.emptyClone();
-        
+    protected void breedPopChunk(Population newpop, EvolutionState state,
+        int[] numinds, int[] from, int threadnum) 
+		{
         for(int subpop=0;subpop<newpop.subpops.length;subpop++)
             {
-            if( !( newpop.subpops[subpop] instanceof Space ) )
-                state.output.fatal( "SpatialBreeder assumes all subpopulations implement the Space interface." );
-
-            Space space = (Space)(state.population.subpops[subpop]);
-
             BreedingPipeline bp = (BreedingPipeline)newpop.subpops[subpop].
                 species.pipe_prototype.clone();
-                
+				
+			if (!(state.population.subpops[subpop] instanceof Space))
+                state.output.fatal("Subpopulation " + subpop + " does not implement the Space interface.");
+			Space space = (Space)(state.population.subpops[subpop]);
+			
             // check to make sure that the breeding pipeline produces
             // the right kind of individuals.  Don't want a mistake there! :-)
-            if (!bp.produces(state,newpop,subpop,0))
+            if (!bp.produces(state,newpop,subpop,threadnum))
                 state.output.fatal("The Breeding Pipeline of subpopulation " + subpop + " does not produce individuals of the expected species " + newpop.subpops[subpop].species.getClass().getName() + " or fitness " + newpop.subpops[subpop].species.f_prototype );
-            bp.prepareToProduce(state,subpop,0);
-                
-            for( int x = 0 ; x < newpop.subpops[subpop].individuals.length ; x++ )
-                {
-                space.setIndex(0,x);
-                // We need to ask the children to be created one at a time!
-                // This is because we need to set the index for each of them appropriately.
-                if( bp.produce( 1,  // minimum individuals to be produced
-                        1,  // maximum individuals to be produced
-                        x,  // index where they should be stored
-                        subpop, // the subpopulation the individuals belong to
-                        newpop.subpops[subpop].individuals, // where to store the individuals
-                        state,  // the evolution state
-                        0)  // the thread number
-                    != 1 )
+            bp.prepareToProduce(state,subpop,threadnum);
+			
+            // start breedin'!
+			for(int x = from[subpop]; x < from[subpop] + numinds[subpop]; x++)
+				{
+				space.setIndex(threadnum, x);
+				if (bp.produce(1, 1, x, subpop, newpop.subpops[subpop].individuals, state, threadnum) != 1)
                     state.output.fatal( "The pipelines should produce one individual at a time!" );
-                }
-
-            bp.finishProducing(state,subpop,0);
+				}
+				
+            bp.finishProducing(state,subpop,threadnum);
             }
-
-        return newpop;
-
         }
 
     }
